# AgentRAG

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentrag/: __init__.py  interfaces.py  pipeline.py
tests/: test_pipeline.py
